2003/10/30 11:29 muppetman

	* GenPod.pm: make sure that all signatures get the same pod directive.
	don't add sigils to return type names.

2003/10/30 09:30 rwmcfa1
	
	* Glib/MakeHelper.pm: improved/safer rules for building the documentation

	* Glib/Makefile.PL: we have some 'special' dependancies for Glib that we need to make sure happen before xsdoc2pod can proceed

2003/10/29 02:00 muppetman

	* Glib.pm: add a version check to Glib's import.

	* GenPod.pm, MakeHelper.pm: rework package to filename handling to
	support packages with :: in the name.  use FULLEXT (makefile var that
	is the full extension path under INST_LIB) and File::Spec."

	* ParseXSDoc.pm: don't clobber package with object; store object
	separately and use it when retrieving pkgdata, but not in place of
	the package name.  this allows xsubs to be placed into a different
	package for doc, but not lose their actual package for the symname.

2003/10/28 23:18 muppetman

	* MakeHelper.pm: don't be an Exporter.  take a shift-off class arg
	on all subs.  this allows them to be overridden, and removes the
	requirement for each client package to import the symbols.
	added pod for just about everything.
	do_pod_files now returns the generated pod_files hash rather than 
	fiddling with one in main::.  it still uses the local @gend_pods,
	though.
	postamble_clean() takes an optional list of extra clean files.
	postamble_docs() takes a list of xs files instead of expecting
	to find @main:xs_files.

	* Makefile.PL: use the new semantics of the MakeHelper functions.

2003/10/28 16:47 rwmcfa1

	* Glib/GClosure.xs, Glib/GLog.xs: put things in the appropriate doc 
	object

	* Glib/GenPod.pm: eval the list_values call. make sure dir creation 
	succeeds, other cleanups

	* Glib/MANIFEST: missing files added

	* Glib/Makefile.PL: updates to new system, MakeHelper. use strict and 
	use warnings safe now

	* Glib/ParseXSDoc.pm: replace the warn handler with what was there 
	before rather than deleting
